--- a/README.Rmd
+++ b/README.Rmd
@@ -2,6 +2,9 @@
 output: github_document
 ---
 
+<img src="http://www.r-pkg.org/badges/version-last-release/BoltzMM"></img></a>
+[![Downloads from the RStudio CRAN mirror](http://cranlogs.r-pkg.org/badges/BoltzMM)](https://CRAN.R-project.org/package=BoltzMM)
+
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
 ```{r, echo = FALSE}
@@ -14,10 +17,10 @@ knitr::opts_chunk$set(
 
 # BoltzMM
 
-The BoltzMM package allows for computation of probability mass functions of fully-visible Boltzmann machines via \code{pfvbm} and \code{allpfvbm}.
-Random data can be generated using \code{rfvbm}. Maximum pseudolikelihood estimation of parameters via the MM algorithm can be conducted using \code{fitfvbm}.
-Computation of partial derivatives and Hessians can be performed via \code{fvbmpartiald} and \code{fvbmHessian}.
-Covariance estimation and normal standard errors can be computed using \code{fvbmcov} and \code{fvbmstderr}.
+The BoltzMM package allows for computation of probability mass functions of fully-visible Boltzmann machines via `pfvbm` and `allpfvbm`.
+Random data can be generated using `rfvbm`. Maximum pseudolikelihood estimation of parameters via the MM algorithm can be conducted using `fitfvbm`.
+Computation of partial derivatives and Hessians can be performed via `fvbmpartiald` and `fvbmHessian`.
+Covariance estimation and normal standard errors can be computed using `fvbmcov` and `fvbmstderr`.
 
 ## Installation
 
@@ -32,23 +35,38 @@ devtools::install_github("andrewthomasjones/BoltzMM")
 
 Compute the probability of every length n=3 binary spin vector under bvec and Mmat:
 
-```{r example, eval = FALSE}
+```{r example, eval = T}
+library(BoltzMM)
+set.seed(1)
+
 bvec <- c(0,0.5,0.25)
 Mmat <- matrix(0.1,3,3) - diag(0.1,3,3)
 allpfvbm(bvec,Mmat)
 ```
 
 Generate num=1000 random strings of n=3 binary spin variables under bvec and Mmat.
-```{r example2, eval = FALSE}
+```{r example2, eval = T}
+library(BoltzMM)
+set.seed(1)
+
 num <- 1000
 bvec <- c(0,0.5,0.25)
 Mmat <- matrix(0.1,3,3) - diag(0.1,3,3)
 data <- rfvbm(num,bvec,Mmat)
+
+head(data)
 ```
 
 Fit a fully visible Boltzmann machine to data, starting from parameters bvec and Mmat.
  
-```{r example3, eval = FALSE}
+```{r example3, eval = T}
+library(BoltzMM)
+set.seed(1)
+
+bvec <- c(0,0.5,0.25)
+Mmat <- matrix(0.1,3,3) - diag(0.1,3,3)
+data <- rfvbm(num,bvec,Mmat)
+
 fitfvbm(data,bvec,Mmat)
 ```
 
