--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,11 @@ Covariance estimation and normal standard errors can be computed using `fvbmcov`
 
 ## Installation
 
-You can install BoltzMM from github with:
+```{r cran-installation, eval = FALSE}
+install.packages("BoltzMM")
+```
+
+You can install the latest version of BoltzMM from github with:
 
 ```{r gh-installation, eval = FALSE}
 # install.packages("devtools")
