--- a/README.Rmd
+++ b/README.Rmd
@@ -46,7 +46,7 @@ The latest stable build of `BoltzMM` can be obtain from CRAN via the command:
 install.packages("BoltzMM", repos='http://cran.us.r-project.org')
 ```
 
-An archival build of `BoltzMM` is available at https://zenodo.org/record/1317784. Manual installation instructions can be found within the *R* installation and administration manual https://cran.r-project.org/doc/manuals/r-release/R-admin.html.
+An archival build of `BoltzMM` is available at [url]. Manual installation instructions can be found within the *R* installation and administration manual https://cran.r-project.org/doc/manuals/r-release/R-admin.html.
 
 ## Examples
 
