--- a/paper.bib
+++ b/paper.bib
@@ -1,135 +1,153 @@
-@book{tukey1977exploratory,
-  title={Exploratory Data Analysis},
-  author={Tukey, J W},
-  publisher={Addison-Wesley},
-  address={Reading},
-  year={1977}
-}
+%% This BibTeX bibliography file was created using BibDesk.
+%% http://bibdesk.sourceforge.net/
 
-@article{rosenblatt1956remarks,
-  title={Remarks on some nonparametric estimates of a density function},
-  author={Rosenblatt, M},
-  journal={Annals of Mathematical Statistics},
-  volume={27},
-  pages={832--837},
-  year={1956},
-  url={https://www.doi.org/10.1214/aoms/1177728190}
-}
+%% Created for Hien Nguyen at 2019-01-12 17:15:32 +1100 
 
-@article{parzen1962estimation,
-  title={On estimation of a probability density function and mode},
-  author={Parzen, E},
-  journal={Annals of Mathematical Statistics},
-  volume={33},
-  pages={1065--1076},
-  year={1962},
-  url={https://www.doi.org/10.1214/aoms/1177704472}
-}
 
-@book{silverman2018density,
-  title={Density Estimation for Statistics and Data Analysis},
-  author={Silverman, B W},
-  year={2018},
-  address={London},
-  publisher={Chapman and Hall}
-}
+%% Saved with string encoding Unicode (UTF-8) 
 
-@book{wand1994kernel,
-  title={Kernel Smoothing},
-  author={Wand, M P and Jones, M C},
-  year={1994},
-  location={Boca Raton},
-  publisher={CRC Press}
-}
 
-@Manual{R2016,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2016},
-  url = {https://www.R-project.org/},
-}
 
-@book{venables1228bd,
-  title={Modern Applied Statistics with S},
-  author={Venables, W N and Ripley, B D},
-  year={2002},
-  location={New York},
-  publisher={Springer},
-  url={https://doi.org/10.1007/978-0-387-21706-2}
-}
+@manual{Rong:2014aa,
+	Author = {X Rong},
+	Date-Added = {2019-01-12 17:14:15 +1100},
+	Date-Modified = {2019-01-12 17:15:32 +1100},
+	Title = {{deepnet: deep learning toolkit in R}},
+	Urldate = {https://CRAN.R-project.org/package=deepnet},
+	Year = {2014}}
 
-@book{keen2010graphics,
-  title={Graphics for Statistics and Data Analysis with R},
-  author={Keen, K J},
-  year={2010},
-  location={Boca Raton},
-  publisher={CRC Press}
-}
+@book{Eddelbuettel2013,
+	Address = {New York},
+	Author = {D Eddelbuettel},
+	Date-Added = {2019-01-12 17:12:58 +1100},
+	Date-Modified = {2019-01-12 17:12:58 +1100},
+	Owner = {uqhngu10},
+	Publisher = {Springer},
+	Timestamp = {2015.07.01},
+	Title = {{Seamless R and C++ Integration with Rcpp}},
+	Year = {2013}}
 
-@book{maindonald2010data,
-  title={Data Analysis and Graphics using R: an Example-Based Approach},
-  author={Maindonald, J and Braun, J},
-  location={Cambridge},
-  year={2010},
-  publisher={Cambridge University Press},
-  url={https://doi.org/10.1017/CBO9781139194648}
-}
+@manual{R-Core-Team:2018aa,
+	Author = {{R Core Team}},
+	Date-Added = {2019-01-12 16:21:13 +1100},
+	Date-Modified = {2019-01-12 16:21:19 +1100},
+	Organization = {R Foundation for Statistical Computing},
+	Title = {{R: a language and environment for statistical computing}},
+	Year = {2018}}
 
-@book{verzani2014using,
-  title={Using R for Introductory Statistics},
-  author={Verzani, J},
-  location={Boca Raton},
-  year={2014},
-  publisher={CRC Press}
-}
+@article{Nguyen:2017aa,
+	Author = {H D Nguyen},
+	Date-Added = {2019-01-12 16:12:33 +1100},
+	Date-Modified = {2019-01-12 16:14:05 +1100},
+	Journal = {WIREs Data Mining and Knowledge Discovery},
+	Pages = {e1198},
+	Title = {{An introduction to MM algorithms for machine learning and statistical estimation}},
+	Volume = {7},
+	Year = {2017}}
 
-@book{trosset2009introduction,
-  title={An introduction to statistical inference and its applications with R},
-  author={Trosset, M W},
-  location={Boca Raton},
-  year={2009},
-  publisher={CRC Press}
-}
+@article{Hunter2004,
+	Author = {D R Hunter and K Lange},
+	Date-Added = {2019-01-12 16:12:07 +1100},
+	Date-Modified = {2019-01-12 16:12:07 +1100},
+	Journal = {The American Statistician},
+	Owner = {hiennguyen},
+	Pages = {30-37},
+	Timestamp = {2014.01.17},
+	Title = {{A tutorial on MM algorithms}},
+	Volume = {58},
+	Year = {2004}}
 
-@article{charpentier2015log,
-  title={Log-transform kernel density estimation of income distribution},
-  author={Charpentier, A and Flachaire, E},
-  journal={L'Actualite economique},
-  volume={91},
-  pages={141--159},
-  year={2015},
-  url={https://www.doi.org/10.7202/1036917ar}
-}
+@article{Nguyen2016,
+	Author = {H D Nguyen and I A Wood},
+	Date-Added = {2019-01-12 16:08:55 +1100},
+	Date-Modified = {2019-01-12 16:08:55 +1100},
+	Journal = {IEEE Transactions on Neural Networks and Learning Systems},
+	Pages = {897-902},
+	Title = {{Asymptotic normality of the maximum pseudolikelihood estimator for fully visible Boltzmann machines}},
+	Volume = {27},
+	Year = {2016}}
 
-@book{eddelbuettel2013seamless,
-  title={Seamless R and C++ Integration with Rcpp},
-  author={Eddelbuettel, D},
-  year={2013},
-  location={New York},
-  publisher={Springer},
-  url={https://www.doi.org/10.1007/978-1-4614-6868-4}
-}
+@article{NguyenWood2016,
+	Author = {H D Nguyen and I A Wood},
+	Date-Added = {2019-01-12 16:08:49 +1100},
+	Date-Modified = {2019-01-12 16:08:49 +1100},
+	Journal = {Neural Computation},
+	Pages = {485-492},
+	Title = {{A block successive lower-bound maximization algorithm for the maximum pseudolikelihood estimation of fully visible Boltzmann machines}},
+	Volume = {28},
+	Year = {2016}}
 
-@article{RJ2016045,
-  author = {W E Wansouwe and S M Some and C C
-          Kokonendji},
-  title = {Ake: An R Package for discrete and continuous associated
-          kernel estimations},
-  year = {2016},
-  journal = {{The R Journal}},
-  url = {https://journal.r-project.org/archive/2016/RJ-2016-045/index.html},
-  pages = {258--276},
-  volume = {8},
-}
+@article{Lindsay1988,
+	Author = {B Lindsay},
+	Date-Added = {2019-01-12 16:07:12 +1100},
+	Date-Modified = {2019-01-12 16:07:12 +1100},
+	Journal = {Contemporary Mathematics},
+	Pages = {221-239},
+	Title = {{Composite likelihood methods}},
+	Volume = {8},
+	Year = {1988}}
 
-@article{hu2018evmix,
-  title={evmix: An {R} package for extreme value mixture modelling, threshold estimation and boundary corrected kernel density estimation},
-  author={Hu, Y and Scarrott, C},
-  journal={Journal of Statistical Software},
-  volume={56},
-  pages={1--30},
-  year={2018},
-  url={https://www.doi.org/10.18637/jss.v084.i05}
-}
+@article{Arnold1991,
+	Author = {B C Arnold and D Strauss},
+	Date-Added = {2019-01-12 16:07:02 +1100},
+	Date-Modified = {2019-01-12 16:07:02 +1100},
+	Journal = {Sankhya B},
+	Owner = {hiennguyen},
+	Pages = {233-243},
+	Timestamp = {2013.12.04},
+	Title = {{Pseudolikelihood estimation: some examples}},
+	Volume = {53},
+	Year = {1991}}
+
+@techreport{Bagnall:2018aa,
+	Author = {J Bagnall and A Jones and N Karavarsamis and H Nguyen},
+	Date-Added = {2019-01-12 15:55:47 +1100},
+	Date-Modified = {2019-01-12 15:58:06 +1100},
+	Institution = {SSRN},
+	Title = {{The fully-visible Boltzmann machine and the Senate of the 45th Australian Parliament in 2016}},
+	Urldate = {http://dx.doi.org/10.2139/ssrn.3287903},
+	Year = {2018}}
+
+@article{Cox:1972aa,
+	Author = {D R Cox},
+	Date-Added = {2019-01-12 15:52:34 +1100},
+	Date-Modified = {2019-01-12 15:53:11 +1100},
+	Journal = {Journal of the Royal Statistical Society C},
+	Number = {113-120},
+	Title = {{The analyis of multivariate binary data}},
+	Volume = {21},
+	Year = {1972}}
+
+@article{Hyvarinen2006,
+	Author = {A Hyvarinen},
+	Date-Added = {2019-01-12 15:28:29 +1100},
+	Date-Modified = {2019-01-12 15:28:29 +1100},
+	Journal = {Neural Computation},
+	Owner = {hiennguyen},
+	Pages = {2283-2292},
+	Timestamp = {2013.12.03},
+	Title = {{Consistency of pseudolikelihood estimation of fully visible Boltzmann machines}},
+	Volume = {18},
+	Year = {2006}}
+
+@article{Le-Roux:2008aa,
+	Author = {N {Le Roux} and Y Bengio},
+	Date-Added = {2019-01-11 17:27:26 +1100},
+	Date-Modified = {2019-01-11 17:27:26 +1100},
+	Journal = {Neural Computation},
+	Pages = {1631-1649},
+	Title = {{Representation power of restricted Boltzmann machines and deep belief networks}},
+	Volume = {20},
+	Year = {2008}}
+
+@article{Ackley1985,
+	Author = {D H Ackley and G E Hinton and T J Sejnowski},
+	Date-Added = {2019-01-11 17:18:22 +1100},
+	Date-Modified = {2019-01-11 17:18:22 +1100},
+	Journal = {Cognitive Science},
+	Owner = {hiennguyen},
+	Pages = {147-169},
+	Timestamp = {2013.12.03},
+	Title = {{A learning algorithm for Boltzmann machines}},
+	Volume = {9},
+	Year = {1985}}
