update reference DOIs

--- a/paper.bib
+++ b/paper.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Hien Nguyen at 2019-01-12 17:15:32 +1100 
+%% Created for Hien Nguyen at 2019-01-12 17:50:59 +1100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -11,20 +11,21 @@
 @manual{Rong:2014aa,
 	Author = {X Rong},
 	Date-Added = {2019-01-12 17:14:15 +1100},
-	Date-Modified = {2019-01-12 17:15:32 +1100},
+	Date-Modified = {2019-01-12 17:46:16 +1100},
 	Title = {{deepnet: deep learning toolkit in R}},
-	Urldate = {https://CRAN.R-project.org/package=deepnet},
+	Url = {https://CRAN.R-project.org/package=deepnet},
 	Year = {2014}}
 
 @book{Eddelbuettel2013,
 	Address = {New York},
 	Author = {D Eddelbuettel},
 	Date-Added = {2019-01-12 17:12:58 +1100},
-	Date-Modified = {2019-01-12 17:12:58 +1100},
+	Date-Modified = {2019-01-12 17:49:53 +1100},
 	Owner = {uqhngu10},
 	Publisher = {Springer},
 	Timestamp = {2015.07.01},
 	Title = {{Seamless R and C++ Integration with Rcpp}},
+	Url = {https://doi.org/10.1007/978-1-4614-6868-4},
 	Year = {2013}}
 
 @manual{R-Core-Team:2018aa,
@@ -38,116 +39,126 @@
 @article{Nguyen:2017aa,
 	Author = {H D Nguyen},
 	Date-Added = {2019-01-12 16:12:33 +1100},
-	Date-Modified = {2019-01-12 16:14:05 +1100},
+	Date-Modified = {2019-01-12 17:43:17 +1100},
 	Journal = {WIREs Data Mining and Knowledge Discovery},
 	Pages = {e1198},
 	Title = {{An introduction to MM algorithms for machine learning and statistical estimation}},
+	Url = {https://doi.org/10.1002/widm.1198 },
 	Volume = {7},
 	Year = {2017}}
 
 @article{Hunter2004,
 	Author = {D R Hunter and K Lange},
 	Date-Added = {2019-01-12 16:12:07 +1100},
-	Date-Modified = {2019-01-12 16:12:07 +1100},
+	Date-Modified = {2019-01-12 17:42:52 +1100},
 	Journal = {The American Statistician},
 	Owner = {hiennguyen},
 	Pages = {30-37},
 	Timestamp = {2014.01.17},
 	Title = {{A tutorial on MM algorithms}},
+	Url = {https://doi.org/10.1198/0003130042836},
 	Volume = {58},
 	Year = {2004}}
 
 @article{Nguyen2016,
 	Author = {H D Nguyen and I A Wood},
 	Date-Added = {2019-01-12 16:08:55 +1100},
-	Date-Modified = {2019-01-12 16:08:55 +1100},
+	Date-Modified = {2019-01-12 17:44:21 +1100},
 	Journal = {IEEE Transactions on Neural Networks and Learning Systems},
 	Pages = {897-902},
 	Title = {{Asymptotic normality of the maximum pseudolikelihood estimator for fully visible Boltzmann machines}},
+	Url = {https://doi.org/10.1109/TNNLS.2015.2425898},
 	Volume = {27},
 	Year = {2016}}
 
 @article{NguyenWood2016,
 	Author = {H D Nguyen and I A Wood},
 	Date-Added = {2019-01-12 16:08:49 +1100},
-	Date-Modified = {2019-01-12 16:08:49 +1100},
+	Date-Modified = {2019-01-12 17:41:53 +1100},
 	Journal = {Neural Computation},
 	Pages = {485-492},
 	Title = {{A block successive lower-bound maximization algorithm for the maximum pseudolikelihood estimation of fully visible Boltzmann machines}},
+	Url = {https://doi.org/10.1162/NECO_a_00813 },
 	Volume = {28},
 	Year = {2016}}
 
 @article{Lindsay1988,
 	Author = {B Lindsay},
 	Date-Added = {2019-01-12 16:07:12 +1100},
-	Date-Modified = {2019-01-12 16:07:12 +1100},
+	Date-Modified = {2019-01-12 17:45:23 +1100},
 	Journal = {Contemporary Mathematics},
 	Pages = {221-239},
 	Title = {{Composite likelihood methods}},
+	Url = {http://dx.doi.org/10.1090/conm/080/999014},
 	Volume = {8},
 	Year = {1988}}
 
 @article{Arnold1991,
 	Author = {B C Arnold and D Strauss},
 	Date-Added = {2019-01-12 16:07:02 +1100},
-	Date-Modified = {2019-01-12 16:07:02 +1100},
+	Date-Modified = {2019-01-12 17:47:45 +1100},
 	Journal = {Sankhya B},
 	Owner = {hiennguyen},
 	Pages = {233-243},
 	Timestamp = {2013.12.04},
 	Title = {{Pseudolikelihood estimation: some examples}},
+	Url = {https://www.jstor.org/stable/25052695},
 	Volume = {53},
 	Year = {1991}}
 
 @techreport{Bagnall:2018aa,
 	Author = {J Bagnall and A Jones and N Karavarsamis and H Nguyen},
 	Date-Added = {2019-01-12 15:55:47 +1100},
-	Date-Modified = {2019-01-12 15:58:06 +1100},
+	Date-Modified = {2019-01-12 17:50:50 +1100},
 	Institution = {SSRN},
 	Title = {{The fully-visible Boltzmann machine and the Senate of the 45th Australian Parliament in 2016}},
-	Urldate = {http://dx.doi.org/10.2139/ssrn.3287903},
+	Url = {http://dx.doi.org/10.2139/ssrn.3287903},
 	Year = {2018}}
 
 @article{Cox:1972aa,
 	Author = {D R Cox},
 	Date-Added = {2019-01-12 15:52:34 +1100},
-	Date-Modified = {2019-01-12 15:53:11 +1100},
+	Date-Modified = {2019-01-12 17:50:41 +1100},
 	Journal = {Journal of the Royal Statistical Society C},
 	Number = {113-120},
-	Title = {{The analyis of multivariate binary data}},
+	Title = {{The analysis of multivariate binary data}},
+	Url = {https://www.jstor.org/stable/2346482},
 	Volume = {21},
 	Year = {1972}}
 
 @article{Hyvarinen2006,
 	Author = {A Hyvarinen},
 	Date-Added = {2019-01-12 15:28:29 +1100},
-	Date-Modified = {2019-01-12 15:28:29 +1100},
+	Date-Modified = {2019-01-12 17:46:07 +1100},
 	Journal = {Neural Computation},
 	Owner = {hiennguyen},
 	Pages = {2283-2292},
 	Timestamp = {2013.12.03},
 	Title = {{Consistency of pseudolikelihood estimation of fully visible Boltzmann machines}},
+	Url = {https://doi.org/10.1162/neco.2006.18.10.2283 },
 	Volume = {18},
 	Year = {2006}}
 
 @article{Le-Roux:2008aa,
 	Author = {N {Le Roux} and Y Bengio},
 	Date-Added = {2019-01-11 17:27:26 +1100},
-	Date-Modified = {2019-01-11 17:27:26 +1100},
+	Date-Modified = {2019-01-12 17:48:17 +1100},
 	Journal = {Neural Computation},
 	Pages = {1631-1649},
 	Title = {{Representation power of restricted Boltzmann machines and deep belief networks}},
+	Url = {https://doi.org/10.1162/neco.2008.04-07-510},
 	Volume = {20},
 	Year = {2008}}
 
 @article{Ackley1985,
 	Author = {D H Ackley and G E Hinton and T J Sejnowski},
 	Date-Added = {2019-01-11 17:18:22 +1100},
-	Date-Modified = {2019-01-11 17:18:22 +1100},
+	Date-Modified = {2019-01-12 17:42:11 +1100},
 	Journal = {Cognitive Science},
 	Owner = {hiennguyen},
 	Pages = {147-169},
 	Timestamp = {2013.12.03},
 	Title = {{A learning algorithm for Boltzmann machines}},
+	Url = {https://doi.org/10.1016/S0364-0213(85)80012-4},
 	Volume = {9},
 	Year = {1985}}
